# connascence-safety-analyzer

./: .bandit  .connascence-gates.yml  .connascence-six-sigma-metrics.json  .coverage  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  ACQUIRE_READY_STATUS.md  CHANGELOG.md  CLARITY_INTEGRATION_COMPLETE.md  CLAUDE.md  CRITICAL_WINS_TODAY.md  DEMONSTRATION_SUMMARY.md  DOGFOOD.md  DUPLICATION_ANALYSIS_FINAL_SUMMARY.md  ENHANCEMENT_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_SETUP_INSTRUCTIONS.md  IMMEDIATE_ACTION_PLAN.md  INSTALLATION.md  LICENSE  MCP_CAPABILITIES_ANALYSIS.md  MCP_VALIDATION_REPORT.md  NUMERICAL_CONSISTENCY_FIX_SUMMARY.md  PERFORMANCE-BOTTLENECK-ANALYSIS.md  PERFORMANCE_CERTIFICATION.md  README-VSCODE-EXTENSION.md  README.md  README_PHASE_1B_COMPLETE.md  README_SALES.md  README_UNIFIED_REPORTS.md  REDUNDANCY_AUDIT.md  __init__.py  analysis.json  bandit.yaml  bandit_report.json  bash.exe.stackdump  ci_results.sarif  (+45 more)
.claude/: connascence-swarm-config.json  memory-integration-config.json
.connascence/: baseline.json
.github/: CI_FIXES_SUMMARY.md
DEMO_ARTIFACTS/: memory_coordination.json  validation_report.json
analysis/: dependency_analysis_report.json  root_cause_report.md
analyzer/: __init__.py  __main__.py  analysis_pipeline_mapping.py  architectural_analysis.py  check_connascence.py  check_connascence_minimal.py  cli_entry.py  cohesion_analyzer.py  connascence_analyzer.py  constants.py  context_analyzer.py  core.py  duplication_helper.py  duplication_unified.py  failure_detection_system.py  formal_grammar.py  grammar_enhanced_analyzer.py  graph_exporter.py  language_strategies.py  magic_literal_analyzer.py  mcp_integration.py  refactored_detector.py  severity_classification.py  smart_integration_engine.py  thresholds.py  unified_analyzer.py  unified_coordinator.py
autofix/: __init__.py  class_splits.py  core.py  god_objects.py  magic_literals.py  param_bombs.py  patch_api.py  patch_generator.py  tier_classifier.py  type_hints.py
cli/: __init__.py  __main__.py  connascence.py  policy_detection.py
config/: central_constants.py  defaults.json  main_config.yml  mcp_fallback.json  no-unicode-rule.toml  performance_benchmark_results.json  ruff-connascence-rules.toml  unicode_config.yaml
connascence/: __init__.py
connascence_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/: unified_imports.py
dashboard/: __init__.py  ci_integration.py  metrics.py  server_flask.py
data-room/: BUYER_WALKTHROUGH.md  EXECUTIVE_BRIEFING_PHASE_3_COMPLETION.md  FINAL_PHASE_3_ENTERPRISE_VALIDATION.md  LINK_VALIDATION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  START_HERE.md  checklist.md
demo/nasa_jpl/: CMakeLists.txt  README.md  demo_analysis.py
demo_results/: final_report.json  final_report.md  phase1_connascence_analysis.json  phase2_six_sigma_metrics.json  phase3_quality_claims.json  phase4_theater_validation.json  phase5_systemic_analysis.json
demo_scans/: FINAL_DEMO_PACKAGE.md  ULTIMATE_ENTERPRISE_DEMO.md
docs/: ACQUISITION_READINESS_STATUS.md  ADR-001-connascence-refactoring.md  ANALYSIS_COMPLETION_SUMMARY.md  ANALYZER-VERIFICATION-EVIDENCE.md  ANALYZER_AUDIT.md  ARCHITECTURAL_IMPROVEMENT_ROADMAP.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_EXTRACTION_SUMMARY.md  BASELINE-METRICS.md  BUG_FIX_SUMMARY.md  CACHE_MANAGER_EXTRACTION_REPORT.md  CACHE_MANAGER_EXTRACTION_SUMMARY.md  CACHE_MANAGER_INTEGRATION_GUIDE.md  CHANGELOG.md  CI-CD-COMPREHENSIVE-FIX-PLAN.md  CI-CD-FIXES-APPLIED.md  CI-CD-POST-FIX-STATUS.md  CI-CD-RESOLUTION-FINAL-REPORT.md  CI-CD-TEST-FAILURES-REPORT.md  CI_FIXES_SUMMARY.md  CI_PIPELINE_README.md  CLARITY_INTEGRATION_SUMMARY.md  CLARITY_LINTER_INTEGRATION.md  CLARITY_LINTER_INTEGRATION_REPORT.md  CLEAN_COMMIT_STRATEGY.md  CLI-FILE-VS-DIRECTORY-FIX.md  CLI_INTERFACE_FIX_REPORT.md  CLI_TEST_FIX_SUMMARY.md  COMPLETE_SYSTEM_INTEGRATION.md  COMPREHENSIVE-ANALYZER-INTEGRATION.md  COMPREHENSIVE-INTEGRATION-SUCCESS-REPORT.md  COMPREHENSIVE-WORKFLOW-ERRORS.md  COMPREHENSIVE_ACTIONABLE_RECOMMENDATIONS.md  COMPREHENSIVE_ANALYSIS_REPORT.json  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODE_QUALITY_ANALYSIS_REPORT.md  CONFIGURATION_GUIDE.md  CONNASCENCE_REDUCTION_REPORT.md  CONNASCENCE_TECHNICAL_DEBT_ANALYSIS.md  CONSOLIDATED_FOLDER_ANALYSIS.json  (+186 more)
dogfood/: ENHANCEMENT-PROGRESS.md  PHASE-1-COMPLETION-REPORT.md  __init__.py  branch_manager.py  connascence-ctq-v1.json  controller.py  metrics-for-ctq.json  metrics_tracker.py  safety_validator.py
enterprise-package/: ANALYSIS_SUMMARY.md  ANALYSIS_TYPES_EXPLAINED.md  ENTERPRISE_ANALYSIS_SUMMARY.md  README.md  README_EXAMPLES.md  celery_duplication.json  celery_mece_duplication.json  celery_nasa_safety.json  celery_safety_analysis.json  curl_connascence.json  curl_duplication.json  curl_full_analysis.json  curl_mece_duplication.json  curl_nasa_safety.json  curl_safety_analysis.json  express_connascence.json  express_duplication.json  express_full_analysis.json  express_mece_duplication.json  express_nasa_safety.json  express_safety_analysis.json  python_codebase_duplication.json
examples/: ci_integration.yaml  clarity_linter_usage.py  claude_implementation_examples.md  cross_validation_examples.md  gemini_analysis_examples.md  metrics_collector_example.py  pre_commit_config.yaml  pre_commit_integration.py  report_generator_usage.py  simple_usage.py
fixes/: OVERALL_PROGRESS_REPORT.md
fixtures/: test_connascence_refactoring.py
fresh-analysis/: COMPREHENSIVE_ANALYSIS_RESULTS.md
grammar/: __init__.py  ast_safe_refactoring.py  constrained_generator.py  overlay_manager.py
integrations/: __init__.py  bandit_integration.py  base_integration.py  black_integration.py  build_flags_integration.py  consolidated_integrations.py  enhanced_linter_integration.py  enhanced_tool_coordinator.py  mypy_integration.py  radon_integration.py  ruff_integration.py  tool_coordinator.py  unified_base.py
interfaces/: __init__.py
mcp/: README.md  __init__.py  analysis_bridge.py  cli.py  enhanced_server.py  run-server.py  server.py  (+5 more)
(+1292 files in other folders)
