[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connascence-analyzer"
version = "1.0.0"
description = "Professional connascence analysis for Python codebases"
authors = [{name = "Connascence Analytics", email = "hello@connascence.io"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["code-quality", "coupling", "connascence", "static-analysis", "refactoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console", 
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "networkx>=2.8",
    "radon>=5.1.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "pathspec>=0.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=2.20",
    "hypothesis>=6.0",
    "dataclasses-json>=0.5.0",
    "psutil>=5.9.0",
]
mcp = [
    "uvicorn>=0.20.0",
    "fastapi>=0.95.0",
]
vscode = [
    "websocket-client>=1.0.0",
]
enterprise = [
    "redis>=4.0.0",
    "sqlalchemy>=2.0.0", 
    "alembic>=1.8.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
]

[project.urls]
Homepage = "https://connascence.io"
Repository = "https://github.com/connascence/connascence-analyzer"
Documentation = "https://docs.connascence.io"
Changelog = "https://github.com/connascence/connascence-analyzer/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/connascence/connascence-analyzer/issues"
"Commercial License" = "https://connascence.io/pricing"

[project.scripts]
connascence = "interfaces.cli.simple_cli:main"
connascence-analyzer = "interfaces.cli.simple_cli:main"

[project.entry-points."mcp.servers"]
connascence = "mcp.server:main"

# Tool Configuration

[tool.setuptools]
packages = ["analyzer", "interfaces", "autofix", "policy", "mcp", "utils", "security", "fixes"]

[tool.setuptools.package-data]
# Include runtime files for all packages
policy = ["presets/*.yml", "*.toml"]
grammar = ["overlays/*.yml"] 
dashboard = ["templates/*.html", "static/*.js", "static/*.css"]
analyzer = ["*.yml", "*.json", "templates/*.html"]
reporting = ["templates/*.html", "templates/*.md", "*.json"]
"*" = ["LICENSE", "*.md", "py.typed"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | deprecated
  | experimental
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings (includes W605 for escape sequences)
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "PLR", # Pylint refactor rules (includes PLR2004 for magic literals)
    "PLW", # Pylint warnings
    "PLE", # Pylint errors
    "C90", # McCabe complexity
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise ... from None
    # Allow certain violations in specific contexts
    "PLR0913", # too-many-arguments (will be handled by connascence CoP detection)
    "PLR0915", # too-many-statements (will be handled by connascence CoA detection)
    "PLR0912", # too-many-branches (will be handled by connascence CoA detection)
    "PLW0603", # global statement (acceptable for DI container pattern)
    "PLR2004", # magic-value-comparison (handled by connascence CoM detection)
    "ARG002",  # unused-method-argument (interface methods, stubs)
    "F821",    # undefined-name (forward references, type hints)
    "ARG001",  # unused-function-argument (hooks, callbacks)
    "E402",    # module-import-not-at-top (conditional imports)
    "E722",    # bare-except (legacy code)
    "PLR0911", # too-many-return-statements
]
unfixable = [
    "B",  # Don't auto-fix potentially unsafe bugbear rules
    "PLR2004", # Magic literals require manual review for context
]

# Regex pattern linting to prevent future SyntaxWarning issues
[tool.ruff.lint.flake8-bugbear]
# Enable additional regex-related checks
extend-immutable-calls = ["re.compile", "re.Pattern"]

# Connascence-specific Ruff integration
[tool.ruff.lint.pylint]
# Configure PLR rules to align with connascence detection
max-args = 4  # Connascence of Position (CoP) threshold
max-branches = 8  # Connascence of Algorithm (CoA) complexity threshold
max-returns = 6  # Connascence of Algorithm (CoA) threshold
max-statements = 25  # Connascence of Algorithm (CoA) threshold
# max-public-methods = 15  # God class detection threshold (handled by connascence analyzer)

# Magic literal detection aligned with Connascence of Meaning (CoM)
# Note: Magic literal detection handled by connascence analyzer

# McCabe complexity aligned with Connascence of Algorithm (CoA)
[tool.ruff.lint.mccabe]
max-complexity = 8  # Lower threshold to catch CoA violations early


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ARG",     # unused function args allowed in tests
    "FBT",     # boolean trap allowed in tests
    "PLR2004", # magic values allowed in tests
    "PLR0913", # too-many-arguments allowed in test fixtures
    "PLR0915", # too-many-statements allowed in test setup
]
"examples/**/*.py" = [
    "PLR2004", # magic values allowed in examples
    "T201",    # print allowed in examples
    "PLR0913", # demonstration code may have many parameters
]
# Configuration and CLI modules - higher complexity allowed
"cli/**/*.py" = [
    "PLR0912", # CLI modules may have complex branching
    "PLR0915", # CLI modules may have many statements
]
"config/**/*.py" = [
    "PLR2004", # Configuration files contain many literals
]
# Legacy integrations - gradual improvement
"integrations/legacy/**/*.py" = [
    "PLR0913", # Legacy code improvements in progress
    "PLR0915", # Legacy code improvements in progress
]

[tool.ruff.lint.isort]
known-first-party = ["analyzer", "policy", "reporting", "cli", "mcp"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "radon.*", 
    "pytest.*",
    "hypothesis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=policy",
    "--cov=autofix",
    "--cov=mcp",
    "--cov=cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests", "fixtures"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "cli: marks tests for CLI interface",
    "mcp_server: marks tests for MCP server integration",
    "vscode: marks tests for VSCode extension",
    "web_dashboard: marks tests for web dashboard",
]

[tool.coverage.run]
branch = true
source = ["policy", "autofix", "cli", "mcp"]
omit = [
    "tests/*",
    "fixtures/*",
    "examples/*", 
    "deprecated/*",
    "experimental/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

# Connascence-specific configuration
[tool.connascence]
# Analysis policy (default, strict-core, nasa_jpl_pot10, lenient)
policy = "strict-core"  

# Output format (json, text, sarif)
format = "json"

# Files and directories to exclude from analysis
exclude = [
    "deprecated/*",
    "experimental/*", 
    "examples/*",
    "fixtures/*",
    "vscode-extension/out/*",
    "vscode-extension/node_modules/*",
    "*/node_modules/*",
    "*/__pycache__/*",
    "*.pyc"
]

# Files and directories to include (overrides exclude)
include = [
    "src/**/*.py",
    "connascence/**/*.py"
]

# Minimum severity level to report (low, medium, high, critical)
severity = "medium"

# Show source code excerpts for violations
show-source = true

# Exit with code 0 even if violations found
exit-zero = false

# Enable strict analysis mode
strict-mode = false

# Enable NASA Power of Ten validation
nasa-validation = false

# Custom thresholds for this codebase
thresholds.max_positional_params = 4  # Slightly relaxed for internal APIs
thresholds.god_class_methods = 25     # Relaxed for main analyzer classes
thresholds.max_cyclomatic_complexity = 12

# Budget limits for PRs  
budgets.CoM = 8      # Magic literals
budgets.CoP = 5      # Position violations  
budgets.CoA = 3      # Algorithm duplication
budgets.critical = 0 # No critical issues
budgets.high = 5     # Max 5 high severity

# Framework profiles
frameworks = [
    "pytest",  # Test framework adaptations
    "fastapi", # For MCP server endpoints
    "vscode",  # VS Code extension patterns
]